# kafka-python-study

./: pyproject.toml
grupos/: notification.json
grupos/kfkpy/: __main__.py
python_kafka/: consumer.py  consumer_server_socket.py  producer.py
python_kafka/chat_client_srv/: client.py  server.py
